Might fix z-index issues

--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -16,7 +16,7 @@
 }
 
 .loading-shade {
-  z-index: 650;
+  z-index: 9999;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -26,4 +26,8 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.28);
+
+  .mat-spinner {
+    z-index: 9999;
+  }
 }
